Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46983

friend declared in private section not documented

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.5.0
    • Build tools: qdoc
    • None
    • f31701805e1d9a55237d6ad3ed1c89156d6ea743

      A friend operator was declared in the private section of a class. qdoc didn't include the function in the documentation because it thought it should be private.

        For Gerrit Dashboard: QTBUG-46983
        # Subject Branch Project Status CR V

            gbk Martin Smith (Qt)
            gbk Martin Smith (Qt)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes